--- a/components/Services/Hero/Hero.module.scss
+++ b/components/Services/Hero/Hero.module.scss
@@ -40,7 +40,7 @@
 
   margin-bottom: 16px;
 
-  @include fontRegular(16px, 600, 16px);
+  @include fontRegular(16px, 600, 16px, $third_text_color);
 
   transition: all 0.3s ease;
 
@@ -52,14 +52,11 @@
   @media screen and (min-width: $min_tablet) {
     width: 356px;
     height: 60px;
-
-    @include fontRegular(18px, 600, 18px);
-
+    @include fontRegular(18px, 600, 18px, $third_text_color);
     margin-bottom: 24px;
   }
   @media screen and (min-width: $min_desktop) {
     width: 411px;
-
     margin-bottom: 0px;
   }
 }
