--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,21 +2,22 @@
 $section_color: #101010;
 $main_bg: #101010;
 $main_text_color: #fdfdfd;
-$seconds_text_color: #b9314f;
-$buttons_color: #9d253f;
-$buttons_hover_color: #e24668;
+$seconds_text_color: #cfb691;
+$third_text_color: #101010;
+$buttons_color: #cfb691;
+$buttons_hover_color: #FDFDFD;
 $black: #000000;
 $form_placeholder: #ababab;
-$additional_bg: #6d1b2d;
+$additional_bg: #cfb691;
 $under_photo_gradient: linear-gradient(
   180deg,
-  #6d1b2d 55.73%,
-  rgba(0, 0, 0, 0) 100%
+  #cfb691 -33.5%,
+  rgba(0, 0, 0, 0) 117.06%
 );
 $dropdown_bg: #1f1f1f;
 $card_bg: #fdfdfd;
 $card_bg_v2: #2e2e2e;
-$accent_v2:#CFB691;
+$accent_v2: #cfb691;
 
 //sizes
 
