--- a/components/Common/InternalNavTitle/InternalNavTitle.module.scss
+++ b/components/Common/InternalNavTitle/InternalNavTitle.module.scss
@@ -15,11 +15,11 @@
 }
 
 .studio {
-  @include fontRegular(14px, 400, 19.6px, #e24668, center);
+  @include fontRegular(14px, 400, 19.6px, $seconds_text_color, center);
   text-wrap: balance;
   margin-bottom: 56px;
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(18px, 400, 25.2px, #e24668, center);
+    @include fontRegular(18px, 400, 25.2px, $seconds_text_color, center);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -31,7 +31,7 @@
     @media screen and (min-width: $min_tablet) {
       height: 2px;
       width: 60px;
-      background-color: #e24668;
+      background-color: $seconds_text_color;
     }
     @media screen and (min-width: $min_desktop) {
     }
