--- a/components/Common/Modal/Modal.module.scss
+++ b/components/Common/Modal/Modal.module.scss
@@ -77,7 +77,7 @@
   justify-content: center;
   align-items: center;
 
-  @include fontRegular(16px, 600, 16px);
+  @include fontRegular(16px, 600, 16px, $third_text_color);
 
   border-radius: 30px;
   background-color: $buttons_color;
