--- a/components/Education/EduPricing/EduPricing.module.scss
+++ b/components/Education/EduPricing/EduPricing.module.scss
@@ -19,7 +19,7 @@ text-align: center;
   padding: 20px 0px;
   margin: 24px 0px;
   border-radius: 30px;
-  background-color: $main_text_color;
+  background-color: $card_bg_v2;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -52,14 +52,14 @@ text-align: center;
 }
 
 .card_title {
-  @include fontRegular(24px, 400, 28.8px, $section_color, center);
+  @include fontRegular(24px, 400, 28.8px, $main_text_color, center);
 
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(18px, 400, 25.2px, $section_color);
+    @include fontRegular(18px, 400, 25.2px, $main_text_color);
     max-width: 226px;
   }
   @media screen and (min-width: $min_desktop) {
-    @include fontRegular(28px, 400, 39.2px, $section_color);
+    @include fontRegular(28px, 400, 39.2px, $main_text_color);
     max-width: 409px;
   }
 }
@@ -74,7 +74,7 @@ text-align: center;
   background-color: $buttons_color;
   border-radius: 30px;
   //   margin-bottom: 16px;
-  @include fontRegular(16px, 600, 16px);
+  @include fontRegular(16px, 600, 16px, $third_text_color);
   transition: all 0.3s ease;
   &:hover,
   &:focus {
@@ -97,21 +97,21 @@ text-align: center;
 }
 
 .card_price {
-  @include fontRegular(28px, 400, 39.2px, $section_color);
+  @include fontRegular(28px, 400, 39.2px, $main_text_color);
 
   //   @media screen and (min-width: $min_tablet) {
   //     @include fontRegular(18px, 400, 25.2px, $section_color);
   //   }
   @media screen and (min-width: $min_desktop) {
-    @include fontRegular(32px, 400, 38.4px, $section_color);
+    @include fontRegular(32px, 400, 38.4px, $main_text_color);
   }
 }
 
 .card_info {
-  @include fontRegular(14px, 400, 19.6px, $section_color);
+  @include fontRegular(14px, 400, 19.6px, $main_text_color);
 
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(18px, 400, 25.2px, $section_color);
+    @include fontRegular(18px, 400, 25.2px, $main_text_color);
   }
   //   @media screen and (min-width: $min_desktop) {
   //     @include fontRegular(28px, 400, 39.2px, $section_color);
