--- a/components/Main/Hero/VideoButton/VideoButton.module.scss
+++ b/components/Main/Hero/VideoButton/VideoButton.module.scss
@@ -9,22 +9,22 @@
 
   border-radius: 30px;
   background: $buttons_color;
-  color: $main_text_color;
 
   font-size: 16px;
   font-weight: 600;
   line-height: 1;
-  @include fontRegular(16px, 600, 16px);
+  @include fontRegular(16px, 600, 16px, $third_text_color);
   transition: all 0.3s ease;
   &:hover,
   :focus {
     scale: 1.05;
+    background-color: $buttons_hover_color;
   }
 
   @media screen and (min-width: $min_tablet) {
     width: 356px;
     height: 60px;
-    @include fontRegular(18px, 600, 18px);
+    @include fontRegular(18px, 600, 18px, $third_text_color);
   }
   @media screen and (min-width: $min_desktop) {
     width: 411px;
