--- a/components/Main/MyDream/MyDream.module.scss
+++ b/components/Main/MyDream/MyDream.module.scss
@@ -1,29 +1,13 @@
 @import "/styles//main.scss";
 
-.section_container {
-  @media screen and (min-width: $min_tablet) {
-    background-image: radial-gradient(
-        circle,
-        rgba(158, 19, 50, 0.1) 17%,
-        rgba(0, 0, 0, 0) 55%
-      ),
-      radial-gradient(circle, rgba(158, 19, 50, 0.1) 15%, rgba(0, 0, 0, 0) 55%);
-    background-position: 420px -120px, -20px -200px;
-    background-size: 400px, 360px;
-    background-repeat: no-repeat;
-  }
-  @media screen and (min-width: $min_desktop) {
-    background-image: radial-gradient(
-        circle,
-        rgba(158, 19, 50, 0.1) 17%,
-        rgba(0, 0, 0, 0) 55%
-      ),
-      radial-gradient(circle, rgba(158, 19, 50, 0.1) 15%, rgba(0, 0, 0, 0) 55%);
-    background-position: 950px -120px, 120px -180px;
-    background-size: 380px, 360px;
-    background-repeat: no-repeat;
-  }
+.section {
+  overflow: visible;
 }
+
+.section_container {
+  position: relative;
+}
+
 .container {
   display: flex;
   align-items: center;
@@ -115,14 +99,65 @@
   border-radius: 30px;
   background: $buttons_color;
 
-  @include fontRegular(16px, 600, 16px);
-
+  @include fontRegular(16px, 600, 16px, $third_text_color);
+  &:hover {
+    background: $buttons_hover_color;
+    scale: 1.05;
+  }
   @media screen and (min-width: $min_tablet) {
     width: 356px;
     height: 60px;
-    @include fontRegular(18px, 600, 18px);
+    @include fontRegular(18px, 600, 18px, $third_text_color);
   }
   @media screen and (min-width: $min_desktop) {
     width: 411px;
+  }
+}
+
+.spot {
+  display: none;
+  @media screen and (min-width: $min_tablet) {
+    position: absolute;
+    display: block;
+
+    top: -5%;
+    left: 1%;
+
+    width: 157px;
+    height: 287px;
+    transform: rotate(-90deg);
+
+    border-radius: 287px;
+    background-image: linear-gradient(
+      180deg,
+      rgba(207, 182, 145, 0.4) 7%,
+      rgba(207, 182, 145, 0.4) 45.14%
+    );
+
+    filter: blur(105px);
+  }
+}
+
+.spot2 {
+  display: none;
+  @media screen and (min-width: $min_tablet) {
+    position: absolute;
+    display: block;
+
+    top: 1%;
+    right: 5%;
+
+    width: 157px;
+    height: 287px;
+    transform: rotate(-90deg);
+
+    border-radius: 287px;
+    background-image: linear-gradient(
+      180deg,
+      rgba(207, 182, 145, 0.4) 7%,
+      rgba(207, 182, 145, 0.4) 45.14%
+    );
+
+    filter: blur(105px);
   }
 }
