--- a/components/Main/Research/ResearchSlider/ResearchSlider.module.scss
+++ b/components/Main/Research/ResearchSlider/ResearchSlider.module.scss
@@ -1,5 +1,7 @@
 @import "/styles/main.scss";
 
+
+
 .swiper_container {
   transform: translateY(-10px);
 }
@@ -64,7 +66,11 @@
   border-radius: 30px;
   background-color: $buttons_color;
 
-  @include fontRegular(16px, 600, 16px);
+  @include fontRegular(16px, 600, 16px, $third_text_color);
+  transition: all 250ms ease;
+  &:is(:hover, :focus) {
+    background-color: $buttons_hover_color;
+  }
 }
 
 .slider_button {
@@ -88,7 +94,7 @@
     }
     &:hover,
     &:focus {
-      background-color: #e24668;
+      background-color: $buttons_hover_color;
     }
   }
 }
@@ -96,5 +102,7 @@
 .slider_arrow {
   width: 24px;
   height: 24px;
-  fill: $main_text_color;
+  fill: $third_text_color;
 }
+
+
