--- a/components/Products/BuyGiftModalForm/BuyGiftModalForm.module.scss
+++ b/components/Products/BuyGiftModalForm/BuyGiftModalForm.module.scss
@@ -28,8 +28,8 @@
   display: flex;
   align-items: center;
   padding: 12px 0px;
-  border-top: 1px solid #e24668;
-  border-bottom: 1px solid #e24668;
+  border-top: 1px solid $additional_bg;
+  border-bottom: 1px solid $additional_bg;
   gap: 16px;
   margin-bottom: 20px;
   @media screen and (min-width: $min_tablet) {
