--- a/components/Products/Meditations/OpenDetailLink/OpenDetailLink.module.scss
+++ b/components/Products/Meditations/OpenDetailLink/OpenDetailLink.module.scss
@@ -13,7 +13,7 @@
   justify-content: center;
   height: 205px;
   border-radius: 30px;
-  background-image: linear-gradient(270deg, #e24668 -135.76%, #000 102.98%);
+  background-image: linear-gradient(270deg, #cfb691 -135.76%, #000 102.98%);
   @media screen and (min-width: $min_tablet) {
     height: 223px;
   }
