--- a/components/Services/AboutConsultations/AboutConsultations.module.scss
+++ b/components/Services/AboutConsultations/AboutConsultations.module.scss
@@ -1,6 +1,11 @@
 @import "/styles/main.scss";
 
+.section {
+  overflow: visible;
+}
+
 .container {
+  position: relative;
   @media screen and (min-width: $min_desktop) {
     display: flex;
     gap: 140px;
@@ -15,21 +20,6 @@
   @media screen and (min-width: $min_tablet) {
     gap: 140px;
     margin-bottom: 32px;
-    background-image: radial-gradient(
-        circle,
-        rgba(109, 27, 45, 0.14) 33%,
-        rgba(158, 19, 50, 0.13) 45%,
-        rgba(0, 0, 0, 0) 79%
-      ),
-      radial-gradient(
-        circle,
-        rgba(109, 27, 45, 0.1) 33%,
-        rgba(158, 19, 50, 0.1) 45%,
-        rgba(0, 0, 0, 0) 79%
-      );
-    background-size: 320px 380px, 220px 280px;
-    background-position: 0% 0%, 90% 100%;
-    background-repeat: no-repeat;
   }
   @media screen and (min-width: $min_desktop) {
     flex: 1;
@@ -62,5 +52,59 @@
     width: 519px;
     height: auto;
     flex: 1;
+  }
+}
+
+.spot {
+  display: none;
+  @media screen and (min-width: $min_tablet) {
+    position: absolute;
+    display: block;
+
+    top: 5%;
+    left: 4%;
+
+    width: 221px;
+    height: 280px;
+
+    border-radius: 280px;
+    background: linear-gradient(
+      180deg,
+      rgba(207, 182, 145, 0.4) 0%,
+      rgba(207, 182, 145, 0.4) 45.14%
+    );
+
+    filter: blur(125px);
+  }
+  @media screen and (min-width: $min_desktop) {
+    top: 5%;
+    right: 4%;
+  }
+}
+
+.spot2 {
+  display: none;
+  @media screen and (min-width: $min_tablet) {
+    position: absolute;
+    display: block;
+
+    top: 35%;
+    right: 0%;
+
+    width: 221px;
+    height: 280px;
+
+    border-radius: 280px;
+    background: linear-gradient(
+      180deg,
+      rgba(207, 182, 145, 0.4) 0%,
+      rgba(207, 182, 145, 0.4) 45.14%
+    );
+
+    filter: blur(125px);
+  }
+  @media screen and (min-width: $min_desktop) {
+    top: 65%;
+    left: 34%;
   }
 }
