--- a/components/Services/ConsultationsTariff/TariffList/TariffList.module.scss
+++ b/components/Services/ConsultationsTariff/TariffList/TariffList.module.scss
@@ -18,7 +18,7 @@
   flex-direction: column;
   align-items: center;
   padding: 16px 23px;
-  background-color: $main_text_color;
+  background-color: $card_bg_v2;
   border-radius: 30px;
   @media screen and (min-width: $min_tablet) {
     flex-direction: row;
@@ -56,13 +56,13 @@
   @include fontRegular(24px, 400, 24px, $dropdown_bg, center);
   margin-bottom: 20px;
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(18px, 400, 25.2px, $dropdown_bg);
+    @include fontRegular(18px, 400, 25.2px, $main_text_color);
     margin-bottom: 0px;
     margin-right: 40px;
     width: 226px;
   }
   @media screen and (min-width: $min_desktop) {
-    @include fontRegular(28px, 400, 39.2px, $dropdown_bg);
+    @include fontRegular(28px, 400, 39.2px, $main_text_color);
     width: 651px;
     margin-right: 62px;
   }
@@ -85,21 +85,21 @@
 }
 
 .price {
-  @include fontRegular(28px, 400, 24px, $dropdown_bg, center);
+  @include fontRegular(28px, 400, 24px, $main_text_color, center);
   margin-bottom: 28px;
   & > span {
-    @include fontRegular(14px, 400, 14px, $dropdown_bg);
+    @include fontRegular(14px, 400, 14px, $main_text_color);
   }
   @media screen and (min-width: $min_tablet) {
     margin-bottom: 0px;
     max-width: 103px;
     & > span {
-      @include fontRegular(18px, 400, 18px, $dropdown_bg, left);
+      @include fontRegular(18px, 400, 18px, $main_text_color, left);
     }
   }
   @media screen and (min-width: $min_desktop) {
     max-width: 182px;
-    @include fontRegular(28px, 400, 39.2px, $dropdown_bg);
+    @include fontRegular(28px, 400, 39.2px, $main_text_color);
   }
 }
 
@@ -111,10 +111,14 @@
   width: 195px;
   height: 51px;
 
-  @include fontRegular(16px, 600, 16px, $main_text_color);
+  @include fontRegular(16px, 600, 16px, $third_text_color);
 
   background-color: $buttons_color;
   border-radius: 30px;
+  transition: all 250ms ease;
+  &:is(:hover, :focus) {
+    background-color: $buttons_hover_color;
+  }
   @media screen and (min-width: $min_tablet) {
     margin-left: auto;
   }
@@ -166,10 +170,10 @@
   padding-top: 0px;
 }
 .description {
-  @include fontRegular(14px, 400, 19.6px, $dropdown_bg, center);
+  @include fontRegular(14px, 400, 19.6px, $main_text_color, center);
   text-wrap: balance;
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(18px, 400, 25.2px, $dropdown_bg);
+    @include fontRegular(18px, 400, 25.2px, $main_text_color);
   }
 }
 
@@ -178,8 +182,8 @@
   align-items: center;
   justify-content: center;
   gap: 8px;
-  @include fontRegular(14px, 400, 19.6px, $dropdown_bg, center);
+  @include fontRegular(14px, 400, 19.6px, $main_text_color, center);
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(18px, 400, 25.2px, $dropdown_bg);
+    @include fontRegular(18px, 400, 25.2px, $main_text_color);
   }
 }
