--- a/components/Services/Feedbacks/FeedbacksSlider/FeedbacksSlider.module.scss
+++ b/components/Services/Feedbacks/FeedbacksSlider/FeedbacksSlider.module.scss
@@ -147,7 +147,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #83263b;
+  background-color: $buttons_color;
   padding: 8px;
   transition: scale 250ms ease;
   &:hover,
@@ -157,7 +157,7 @@
 }
 
 .arrow {
-  fill: $main_text_color;
+  fill: $third_text_color;
   &_right {
     rotate: -90deg;
   }
