--- a/components/Services/Offline-meetings/Hero/Hero.module.scss
+++ b/components/Services/Offline-meetings/Hero/Hero.module.scss
@@ -1,6 +1,7 @@
 @import "/styles/main.scss";
 
 .container {
+  position: relative;
   display: grid;
   gap: 24px;
   @media screen and (min-width: $min_tablet) {
@@ -12,16 +13,7 @@
 }
 
 .section {
-  @media screen and (min-width: $min_desktop) {
-    background-image: radial-gradient(
-      circle,
-      rgba(109, 27, 45, 0.14) 8%,
-      rgba(0, 0, 0, 0) 79%
-    );
-    background-size: 440px 450px;
-    background-position: 10% 50%;
-    background-repeat: no-repeat;
-  }
+  overflow: visible;
 }
 
 .title {
@@ -63,5 +55,28 @@
   @media screen and (min-width: $min_desktop) {
     grid-column: 2;
     grid-row: 1 / span 2;
+  }
+}
+
+.spot {
+  display: none;
+  @media screen and (min-width: $min_desktop) {
+    position: absolute;
+    display: block;
+
+    top: 13%;
+    left: 5%;
+
+    width: 221px;
+    height: 280px;
+
+    border-radius: 280px;
+    background-image: linear-gradient(
+      180deg,
+      rgba(207, 182, 145, 0.4) 7%,
+      rgba(207, 182, 145, 0.4) 45.14%
+    );
+
+    filter: blur(125px);
   }
 }
