--- a/components/Services/ServicesForYouIf/ServicesForYouIf.module.scss
+++ b/components/Services/ServicesForYouIf/ServicesForYouIf.module.scss
@@ -63,7 +63,7 @@
   width: 48px;
   height: 48px;
   padding: 12px;
-  background-color: $seconds_text_color;
+  background-color: $additional_bg;
   border-radius: 50%;
   @media screen and (min-width: $min_tablet) {
     width: 58px;
@@ -73,7 +73,7 @@
 }
 
 .icon {
-  fill: $main_text_color;
+  fill: $third_text_color;
   width: 24px;
   height: 24px;
   @media screen and (min-width: $min_tablet) {
