--- a/components/HumanPsychology/MyHistoryFoundation/MyHistoryFoundation.module.scss
+++ b/components/HumanPsychology/MyHistoryFoundation/MyHistoryFoundation.module.scss
@@ -1,6 +1,11 @@
 @import "/styles/main.scss";
 
+.section {
+  overflow: visible;
+}
+
 .container {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -65,5 +70,29 @@
   @media screen and (min-width: $min_desktop) {
     display: block;
     flex-basis: 519px;
+  }
+}
+
+.spot {
+  display: none;
+  @media screen and (min-width: $min_tablet) {
+    display: block;
+    width: 227px;
+    height: 287px;
+    transform: rotate(-90deg);
+    position: absolute;
+    right: 32px;
+    top: -76px;
+    border-radius: 287px;
+    background: linear-gradient(
+      180deg,
+      rgba(207, 182, 145, 0.4) 0%,
+      rgba(207, 182, 145, 0.4) 45.14%
+    );
+    filter: blur(125px);
+    z-index: -1;
+  }
+  @media screen and (min-width: $min_desktop) {
+    right: 196px;
   }
 }
