--- a/components/Products/ModalBuyForm/ModalBuyForm.module.scss
+++ b/components/Products/ModalBuyForm/ModalBuyForm.module.scss
@@ -231,7 +231,8 @@
 .form_price {
   display: flex;
   gap: 16px;
-  @include fontRegular(14px, 400, 19.6px);
+  font-size: 14px;
+  line-height: 1.4;
   @media screen and (min-width: $min_tablet) {
     @include fontRegular(18px, 400, 25.2px);
   }
