added form, matrix graph and life map

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -18,6 +18,7 @@ $dropdown_bg: #1f1f1f;
 $card_bg: #fdfdfd;
 $card_bg_v2: #2e2e2e;
 $accent_v2: #cfb691;
+$matrix_bg_gradient: linear-gradient(270deg, #cfb691 -135.76%, #000 102.98%);
 
 //sizes
 
