added health, period and current period

--- a/components/Calculator/PersonalMatrix/MatrixGraph/MatrixGraph.module.scss
+++ b/components/Calculator/PersonalMatrix/MatrixGraph/MatrixGraph.module.scss
@@ -245,7 +245,7 @@
       left: 27.2%;
     }
   }
-  @media screen and (min-width: $min_tablet) {
+  @media screen and (min-width: $min_desktop) {
     &_left2 {
       top: 48.2%;
       left: 11.3%;
