added group matrix calculator

--- a/components/Calculator/CompatibilityMatrix/CompatibilityMatrixForm/CompatibilityMatrixForm.module.scss
+++ b/components/Calculator/CompatibilityMatrix/CompatibilityMatrixForm/CompatibilityMatrixForm.module.scss
@@ -10,6 +10,12 @@
   }
 }
 
+.person_wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 .name_label {
   display: flex;
   flex-direction: column;
