--- a/components/Calculator/PersonalMatrix/HealthMap/HealthMap.module.scss
+++ b/components/Calculator/PersonalMatrix/HealthMap/HealthMap.module.scss
@@ -47,17 +47,19 @@
     height: 50px;
     width: 116px;
   }
-  @media screen and (min-width: $min_desktop) {
-  }
+
 }
 
 .chakraname_text {
-  @include fontRegular(14px, 400, 19.6px, $third_text_color, center);
+  text-align: center !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 1.4 !important;
+  color: $third_text_color !important;
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(18px, 400, 25.2px, $third_text_color, center);
+    font-size: 18px !important;
   }
-  @media screen and (min-width: $min_desktop) {
-  }
+
 }
 
 //ключи і назви
@@ -70,8 +72,7 @@
   @media screen and (min-width: $min_tablet) {
     min-height: 52px;
   }
-  @media screen and (min-width: $min_desktop) {
-  }
+
 }
 
 .chakra_text {
