--- a/components/Calculator/PersonalMatrix/PeriodMap/PeriodMap.module.scss
+++ b/components/Calculator/PersonalMatrix/PeriodMap/PeriodMap.module.scss
@@ -42,7 +42,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  @include fontRegular(14px, 400, 19.6px, $third_text_color, center);
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 1.4 !important;
+  color: $third_text_color !important;
+  text-align: center !important;
   width: 44px;
   height: 100%;
   &:last-child {
@@ -54,7 +58,7 @@
   }
   @media screen and (min-width: $min_tablet) {
     width: 90px;
-    @include fontRegular(18px, 400, 25.2px, $third_text_color, center);
+    font-size: 18px !important;
   }
   @media screen and (min-width: $min_desktop) {
   }
