--- a/components/Calculator/PersonalMatrix/PersonalCalculator.module.scss
+++ b/components/Calculator/PersonalMatrix/PersonalCalculator.module.scss
@@ -21,3 +21,20 @@
     grid-template-rows: repeat(4, 1fr);
   }
 }
+
+
+.hero {
+  margin-bottom: 80px;
+  @media screen and (min-width: $min_tablet) {
+    margin-bottom: 100px;
+  }
+  //   @media screen and (min-width: $min_desktop) {
+  //     margin-bottom: 80px;
+  //   }
+}
+
+.matrix_wrapper {
+  border-top: 1px solid $seconds_text_color;
+  border-bottom: 1px solid $seconds_text_color;
+  background: $matrix_bg_gradient;
+}
