--- a/components/Calculator/CalculatorHero/CalculatorHero.module.scss
+++ b/components/Calculator/CalculatorHero/CalculatorHero.module.scss
@@ -1,4 +1,4 @@
-@import "../styles/main.scss";
+@import '../styles/main.scss';
 
 .section {
   position: relative;
@@ -43,7 +43,7 @@
 }
 
 .desc {
-    white-space: pre-line;
+  white-space: pre-line;
   @include fontRegular(14px, 400, 19.6px, $seconds_text_color, center);
   &:not(:last-of-type) {
     margin-bottom: 24px;
@@ -53,6 +53,9 @@
     &:not(:last-of-type) {
       margin-bottom: 24px;
     }
+  }
+  @media screen and (min-width: $min_desktop) {
+    max-width: 922px;
   }
 }
 
