--- a/components/Calculator/CompatibilityMatrix/ResultMatrix/ResultLifeMap/ResultLifeMap.module.scss
+++ b/components/Calculator/CompatibilityMatrix/ResultMatrix/ResultLifeMap/ResultLifeMap.module.scss
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   gap: 60px;
+  justify-content: center;
+  flex-grow: 1;
   @media screen and (min-width: $min_tablet) {
     gap: 96px;
   }
@@ -69,7 +71,6 @@
   flex-direction: column;
   align-items: center;
   gap: 24px;
-  margin-top: 60px;
 }
 
 .spirit_title {
@@ -83,5 +84,67 @@
   @include fontRegular(14px, 400, 19.6px);
   @media screen and (min-width: $min_tablet) {
     @include fontRegular(18px, 400, 25.2px);
+  }
+}
+
+
+//ключ розширення
+
+.extension_title {
+  margin-bottom: 40px;
+  font-size: 24px;
+  text-align: center;
+  @media screen and (min-width: $min_tablet) {
+    font-size: 28px;
+  }
+}
+
+.extension_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 100px;
+  row-gap: 36px;
+  @media screen and (min-width: $min_tablet) {
+    justify-content: space-around;
+  }
+  @media screen and (min-width: $min_desktop) {
+    flex-wrap: nowrap;
+    gap: 0px;
+    justify-content: space-between;
+  }
+}
+
+.extension_list_item {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  align-items: center;
+}
+
+.extension_key {
+  display: flex;
+  width: 42px;
+  height: 42px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 50%;
+  border: 2px solid $accent_v2;
+  @include fontRegular(16px, 400, 22.4px);
+
+  @media screen and (min-width: $min_tablet) {
+    width: 46px;
+    height: 46px;
+    @include fontRegular(20px, 400, 28px);
+  }
+}
+
+.extension_name {
+  @include fontRegular(16px, 400, 22.4px);
+  text-align: center;
+  @media screen and (min-width: $min_tablet) {
+    @include fontRegular(20px, 400, 28px);
   }
 }
