--- a/components/Calculator/Consciousness/ConsciousnessGraph/ConsciousnessGraph.module.scss
+++ b/components/Calculator/Consciousness/ConsciousnessGraph/ConsciousnessGraph.module.scss
@@ -45,3 +45,51 @@
     height: 716px;
   }
 }
+
+
+//center
+
+.center {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  font-size: 14px !important;
+  font-weight: 700 !important;
+  line-height: 28px !important;
+  text-align: center;
+  color: $seconds_text_color !important;
+  &_main {
+    top: 46.2%;
+    left: 46%;
+  }
+  &_additional {
+    top: 46.1%;
+    left: 57.6%;
+    font-size: 10px !important;
+  }
+  @media screen and (min-width: $min_tablet) {
+    width: 40px;
+    font-size: 22px !important;
+    &_main {
+      top: 48.2%;
+      left: 47.5%;
+    }
+    &_additional {
+      top: 48.1%;
+      left: 57.4%;
+      font-size: 16px !important;
+    }
+  }
+  @media screen and (min-width: $min_desktop) {
+    &_main {
+      top: 48.4%;
+      left: 47.2%;
+    }
+    &_additional {
+      top: 48.4%;
+      left: 59%;
+    }
+  }
+}
