--- a/components/Calculator/NineTribesMatrix/NineTribesGraph/NineTribesGraph.module.scss
+++ b/components/Calculator/NineTribesMatrix/NineTribesGraph/NineTribesGraph.module.scss
@@ -1,12 +1,8 @@
 @import '/styles/main.scss';
 
-.main_wrapper {
-  margin-bottom: 60px;
-  @media screen and (min-width: $min_tablet) {
-    margin-bottom: 90px;
-  }
+.wrapper {
   @media screen and (min-width: $min_desktop) {
-    margin-bottom: 0px;
+    width: 618px;
   }
 }
 
@@ -56,72 +52,67 @@
   }
 }
 
-//center
-
-.center {
+.health_sqr {
   position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 30px;
-  font-size: 14px !important;
-  font-weight: 700 !important;
-  line-height: 28px !important;
-  text-align: center;
-  color: $seconds_text_color !important;
-  &_main {
-    top: 46.2%;
-    left: 45.8%;
+  width: 24px;
+  @include fontRegular(10px, 700, 28px, $seconds_text_color);
+  &_innerTopLeft {
+    top: 34.2%;
+    left: 31%;
   }
-  &_additional {
-    top: 46.1%;
-    left: 54.4%;
+  &_innerTopRight {
+    top: 34.2%;
+    right: 30%;
+  }
+  &_innerBottomRight {
+    bottom: 34.7%;
+    right: 30%;
+  }
+  &_innerBottomLeft {
+    bottom: 34.7%;
+    left: 31%;
   }
   @media screen and (min-width: $min_tablet) {
-    width: 40px;
-    font-size: 22px !important;
-    &_main {
-      top: 48.2%;
-      left: 47.5%;
+    width: 30px;
+    font-size: 16px;
+    &_innerTopLeft {
+      top: 33.9%;
+      left: 35.1%;
     }
-    &_additional {
-      top: 48.2%;
-      left: 54.8%;
+    &_innerTopRight {
+      top: 34%;
+      right: 34.2%;
+    }
+    &_innerBottomRight {
+      bottom: 33%;
+      right: 34.2%;
+    }
+    &_innerBottomLeft {
+      bottom: 33%;
+      left: 35%;
     }
   }
   @media screen and (min-width: $min_desktop) {
-    &_main {
-      top: 48.4%;
-      left: 47.2%;
-    }
-    &_additional {
-      top: 48.2%;
-      left: 55.6%;
-    }
-  }
-}
-
-.info_wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  gap: 20px;
-  margin: 0 auto;
-  @media screen and (min-width: $min_tablet) {
-    width: 618px;
-    gap: 28px;
-  }
-}
-
-.info_text {
-  @include fontRegular(14px, 400, 19.6px, $main_text_color, center);
-  letter-spacing: 0%;
-  @media screen and (min-width: $min_tablet) {
+    width: 30px;
     font-size: 16px;
-    &:last-child {
-      font-size: 18px;
+    &_innerTopLeft {
+      top: 33.9%;
+      left: 32.4%;
+    }
+    &_innerTopRight {
+      top: 33.9%;
+      right: 31.2%;
+    }
+    &_innerBottomRight {
+      bottom: 33%;
+      right: 31.2%;
+    }
+    &_innerBottomLeft {
+      bottom: 33%;
+      left: 32.3%;
     }
   }
 }
