--- a/components/Calculator/PersonalMatrix/PersonalCalculator.module.scss
+++ b/components/Calculator/PersonalMatrix/PersonalCalculator.module.scss
@@ -2,10 +2,10 @@
 
 .wrapper {
   margin-bottom: 60px;
-  @media screen and (min-width: $min_tablet) {
+  @media all and (min-width: $min_tablet) {
     margin-bottom: 96px;
   }
-  @media screen and (min-width: $min_desktop) {
+  @media all and (min-width: $min_desktop) {
     display: flex;
     gap: 34px;
   }
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   gap: 60px;
-  @media screen and (min-width: $min_desktop) {
+  @media all and (min-width: $min_desktop) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 1fr);
@@ -25,7 +25,7 @@
 
 .hero {
   margin-bottom: 80px;
-  @media screen and (min-width: $min_tablet) {
+  @media all and (min-width: $min_tablet) {
     margin-bottom: 100px;
   }
   //   @media screen and (min-width: $min_desktop) {
