--- a/components/Main/About/About.module.scss
+++ b/components/Main/About/About.module.scss
@@ -1,4 +1,4 @@
-@import "/styles/main.scss";
+@import '/styles/main.scss';
 
 .section {
   overflow: visible;
@@ -33,6 +33,18 @@
     grid-area: 1 / 2 / 3 / 3;
     align-items: flex-end;
     margin-bottom: 0;
+  }
+}
+
+.additional_title1 {
+  @include fontRegular(18px, 400, 25.2px);
+  margin-bottom: 8px;
+}
+
+.additional_title2 {
+  @include fontRegular(16px, 400, 22.4px);
+  @media screen and (min-width: $min_tablet) {
+    font-size: 18px;
   }
 }
 
