--- a/components/Main/Hero/Hero.module.scss
+++ b/components/Main/Hero/Hero.module.scss
@@ -1,4 +1,4 @@
-@import "/styles/main.scss";
+@import '/styles/main.scss';
 
 .styled_section {
   overflow: hidden;
@@ -6,12 +6,10 @@
 }
 
 .text {
-  @include fontRegular(14px, 400, 19.5px);
-  max-width: 242px;
+  @include fontRegular(14px, 400, 19.6px);
   margin-bottom: 32px;
   @media screen and (min-width: $min_tablet) {
     @include fontRegular(18px, 400, 25.2px);
-    max-width: 100%;
     margin-bottom: 20px;
   }
 }
@@ -36,6 +34,7 @@
     display: block;
     @include fontRegular(94px, 400, 94px);
     margin-bottom: 60px;
+    width: 737px;
   }
 }
 
@@ -65,11 +64,11 @@
   @media screen and (min-width: $min_tablet) {
     display: block;
     width: 360px;
-    height: 516px;
+    height: 680px;
   }
   @media screen and (min-width: $min_desktop) {
     width: 497px;
-    height: 694px;
+    height: 801px;
   }
 }
 
@@ -79,14 +78,25 @@
 
   margin-bottom: 55px;
   @media screen and (min-width: $min_tablet) {
-    background-image: url("../../../public//assets/images/Vector.svg");
+    gap: 20px;
+    background-image: url('../../../public//assets/images/Vector.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: 105% 50%;
-    background-size: 75%;
+    background-size: 70%;
+    backdrop-filter: blur(40px);
   }
   @media screen and (min-width: $min_desktop) {
     background-position: 100% 50%;
     background-size: 684px 684px;
+  }
+}
+
+.text_wrapper {
+  @media screen and (min-width: $min_tablet) {
+    width: 356px;
+  }
+  @media screen and (min-width: $min_desktop) {
+    width: 100%;
   }
 }
