--- a/components/Calculator/ParentsAndChildren/ParentsAndChildrenGraph/ParentsAndChildrenGraph.module.scss
+++ b/components/Calculator/ParentsAndChildren/ParentsAndChildrenGraph/ParentsAndChildrenGraph.module.scss
@@ -119,63 +119,61 @@
   position: absolute;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   width: 17px;
-  @include fontRegular(10px, 700, 28px, $seconds_text_color);
+  @include fontRegular(8px, 700, 22.4px, $seconds_text_color);
   &_parentsAddit1 {
-    top: 29%;
-    left: 36.4%;
+    top: 29.6%;
+    left: 37.8%;
   }
   &_parentsAddit2 {
-    top: 37.8%;
-    left: 25.1%;
+    top: 38.3%;
+    left: 26.2%;
   }
   &_parentsAddit3 {
-    bottom: 38.4%;
-    left: 27.6%;
-    justify-content: flex-start;
+    bottom: 39.3%;
+    left: 26.4%;
   }
   &_parentsAddit4 {
-    bottom: 30.1%;
-    left: 37.7%;
-    justify-content: flex-start;
+    bottom: 30.8%;
+    left: 37%;
   }
   @media all and (min-width: $min_tablet) {
     width: 30px;
-    font-size: 16px;
+    font-size: 14px;
     &_parentsAddit1 {
-      top: 28.2%;
-      left: 38.6%;
+      top: 28.4%;
+      left: 39.7%;
     }
     &_parentsAddit2 {
-      top: 37.9%;
-      left: 29.2%;
+      top: 38.2%;
+      left: 30.2%;
     }
     &_parentsAddit3 {
-      bottom: 37.2%;
-      left: 31.3%;
+      bottom: 37.6%;
+      left: 30.2%;
     }
     &_parentsAddit4 {
-      bottom: 28%;
-      left: 39.8%;
+      bottom: 28.5%;
+      left: 39.2%;
     }
   }
   @media all and (min-width: $min_desktop) {
     &_parentsAddit1 {
-      top: 28.1%;
-      left: 36.5%;
+      top: 28.3%;
+      left: 37.9%;
     }
     &_parentsAddit2 {
-      top: 37.8%;
-      left: 25.1%;
+      top: 38%;
+      left: 26.4%;
     }
     &_parentsAddit3 {
-      bottom: 37.2%;
-      left: 27.7%;
+      bottom: 37.7%;
+      left: 26.5%;
     }
     &_parentsAddit4 {
-      bottom: 28.1%;
-      left: 37.8%;
+      bottom: 28.6%;
+      left: 37.2%;
     }
   }
 }
